# components

debouncer/: debouncer.c  debouncer.h
encoder/: encoder.c  encoder.h
graphics/: graphics.c  graphics.h  menu.c  menu.h
graphics/fonts/: nesfont8x8.h  uzeboxA6x8.h  uzeboxB6x8.h
midi/: CMakeLists.txt  midi.c  midi.h  midi_defs.h
midi/test/: test_midi.c
ringbuf/: ringbuf.c  ringbuf.h
sevenseg/: sevenseg.c  sevenseg.h
synth/: CMakeLists.txt  env.c  env.h  lfo.c  lfo.h  osc.c  osc.h  wave.c  wave.h
synth/test/: test_synth.c
